fix menu z-index

--- a/_sass/_menu.scss
+++ b/_sass/_menu.scss
@@ -174,6 +174,11 @@
   }
 }
 
-h1, h2, h3, h4, h5, h6 {
-  z-index: -1;
+.tl_page {
+  *:not(#menu) {
+    z-index: -1;
+  }
+  #menu * {
+    z-index: 999;
+  }
 }
